<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@drawable/login_layout_bg"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".LoginActivity">



    <ScrollView
        android:id="@+id/login_form"
        android:scrollbars="none"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentBottom="true"
        android:layout_alignParentStart="true">

        <RelativeLayout
            android:id="@+id/email_login_form"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:id="@+id/login_logo"
                android:src="@drawable/lc1"
                android:layout_centerHorizontal="true"
                android:layout_width="120dp"
                android:layout_height="120dp" />

            <TextView
                android:id="@+id/login_logo_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/login_logo"
                android:layout_centerHorizontal="true"
                android:layout_marginBottom="40dp"
                android:text="@string/logo_text"
                android:textColor="@color/textColor"
                android:textSize="25sp"
                android:textStyle="bold" />

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/login_username"
                    android:layout_below="@+id/login_logo_text"
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:layout_marginTop="40dp"
                    android:paddingStart="10dp"
                    android:paddingEnd="5dp"
                    android:drawableStart="@drawable/ic_person_dark_green_24dp"
                    android:drawablePadding="12dp"
                    android:hint="@string/prompt_email"
                    android:textColor="@color/textColor"
                    android:textColorHint="@color/textColor"
                    android:background="@drawable/rounded_edit_text"
                    android:inputType="textEmailAddress"
                    android:maxLines="1"
                    android:singleLine="true" />

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/login_password"
                    android:layout_below="@+id/login_username"
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:layout_marginTop="10dp"
                    android:paddingStart="10dp"
                    android:paddingEnd="5dp"
                    android:drawableStart="@drawable/ic_lock_dark_green_24dp"
                    android:drawablePadding="12dp"
                    android:hint="@string/prompt_password"
                    android:textColor="@color/textColor"
                    android:textColorHint="@color/textColor"
                    android:background="@drawable/rounded_edit_text"
                    android:inputType="textPassword"
                    android:maxLines="1"
                    android:singleLine="true" />

            <Button
                android:id="@+id/login_button"
                android:layout_below="@+id/login_password"
                style="?android:textAppearanceSmall"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_marginTop="16dp"
                android:background="@drawable/rounded_buton"
                android:text="@string/action_sign_in"
                android:textColor="@color/textColor"
                android:textStyle="bold" />

            <LinearLayout
                android:id="@+id/l_login_text"
                android:layout_below="@+id/login_button"
                android:orientation="horizontal"
                android:layout_marginTop="20dp"
                android:layout_centerInParent="true"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/no_account_text"
                    android:textSize="20sp"
                    android:textColor="@color/textColor"/>
                <TextView
                    android:id="@+id/sign_up"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="5dp"
                    android:text="@string/sign_up_text"
                    android:textStyle="bold"
                    android:textSize="20sp"
                    android:textColor="@color/textColor"/>


            </LinearLayout>
            <TextView
                android:layout_below="@+id/l_login_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:text="@string/forgot_password"
                android:textColor="@color/textColor"
                android:textSize="20sp"
                android:layout_marginTop="20dp"/>

        </RelativeLayout>
    </ScrollView>
</RelativeLayout>